fix modal button overflow

--- a/ui/components/Modal/modal.module.css
+++ b/ui/components/Modal/modal.module.css
@@ -33,7 +33,6 @@
   padding: 0 20px;
   padding-bottom: 20px;
   display: flex;
-  width: 100%;
   min-width: 200px;
   justify-content: end;
   column-gap: 10px;
